--- a/404.html
+++ b/404.html
@@ -1,7 +1,46 @@
----
-layout: page
----
-  <h1>404</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Soveu - {{ page.title }}</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+<div id='wrapper'>
+    <div id='header'>
+        <pre>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+ _______________________ 
+/  _  _    ___  _  _    \
+| | || |  / _ \| || |   |
+| | || |_| | | | || |_  |
+| |__   _| |_| |__   _| |
+|    |_|  \___/   |_|   |
+\                       /
+ ----------------------- 
+         \    __________
+          \  / ___  ___ \
+            / / @ \/ @ \ \
+            \ \___/\___/ /\
+             \____\/____/||
+             /     /\\\\\//
+             |     |\\\\\\
+             \      \\\\\\
+              \______/\\\\
+               _||_||_
+                -- --
+        </pre>
+    </div> 
+        <ul id='menu'>
+          <li><a href='/index.html'>Home</a></li>
+          <li><a href='/about.html'>About</a></li>
+          <li><a href='/en'>English posts</a></li>
+          <li><a href='/pl'>Polish posts</a></li>
+        </ul>
+    <hr id='pagesplit'>
+</div>
+</body>
+</html>
+
