--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Soveu - {{ page.title }}</title>
+    <title>Soveu - 404</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -40,6 +40,9 @@
           <li><a href='/pl'>Polish posts</a></li>
         </ul>
     <hr id='pagesplit'>
+    <div id='content'>
+      <center><h1>This page is not avaliable in your country :(</h1></center>
+    </div>
 </div>
 </body>
 </html>
